# kestrel

./: .cursor-ambiguity-check.txt  .cursor-stdlib-check.txt  .gitignore  .rustfmt.toml  CLAUDE.md  CODEGEN_ISSUES.md  CONTRIBUTING.md  Cargo.toml  FIX_ISSUES.md  KESTREL_SKILL.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  README2.md  RELEASE_CHECKLIST.md  ROADMAP.md  TODO.md  array  array2.asm  array2.asm.optimized  build_log.txt  char_access_variants  clippy.toml  cluster2_expr_body_crash  context7.json  cranelift_ir.txt  default_protocol_prompt  errors.md  execution_graph.txt  hello  issues-type-inference-2.md  literal_default_against_associated_type_arg  lldb_script  lldb_script_allocate  lldb_script_new  lldb_script_udfs  lldb_script_unwrap  minimal_test  optimize_asm.py  parser-refactor-plan.md  (+81 more)
lib/kestrel-analyze/: AGENTS.md  Cargo.toml
lib/kestrel-analyze/docs/: architecture.md
lib/kestrel-analyze/src/: context.rs  diagnostic.rs  lib.rs  registry.rs  traits.rs  util.rs
lib/kestrel-ast-builder/: Cargo.toml
lib/kestrel-ast-builder/docs/: architecture.md  components.md  entity-mapping.md
lib/kestrel-ast-builder/src/: arg_binding.rs  ast_type.rs  build.rs  components.rs  lang_module.rs  lib.rs  lower.rs  string_token.rs
lib/kestrel-codegen/: Cargo.toml
lib/kestrel-codegen-cranelift/: AGENTS.md  Cargo.toml
lib/kestrel-codegen-cranelift-2/: Cargo.toml
lib/kestrel-codegen-cranelift-2/src/: abi.rs  block.rs  call.rs  context.rs  func.rs  imm.rs  lib.rs  link.rs  mem.rs  place.rs  rvalue.rs  stmt.rs  terminator.rs  ty.rs
lib/kestrel-codegen-cranelift-3/: AGENTS.md  Cargo.toml
lib/kestrel-codegen-cranelift-3/src/: abi.rs  context.rs  func.rs  imm.rs  inst.rs  lib.rs  link.rs  mem.rs  terminator.rs  ty.rs
lib/kestrel-codegen-cranelift/runtime/: malloc_debug.c
lib/kestrel-codegen-cranelift/src/: abi.rs  block.rs  common.rs  context.rs  error.rs  func.rs  function.rs  imm.rs  inst.rs  intrinsics.rs  lib.rs  link.rs  mem.rs  place.rs  rvalue.rs  terminator.rs  ty.rs  types.rs
lib/kestrel-codegen-llvm/: AGENTS.md  Cargo.toml
lib/kestrel-codegen-llvm/src/: abi.rs  context.rs  error.rs  func.rs  imm.rs  inst.rs  lib.rs  link.rs  mem.rs  terminator.rs  ty.rs
lib/kestrel-codegen/src/: layout.rs  lib.rs  mangle.rs  target.rs
lib/kestrel-compiler/: Cargo.toml  README.md
lib/kestrel-compiler-driver/: Cargo.toml
lib/kestrel-compiler-driver/src/: lib.rs
lib/kestrel-compiler/docs/: architecture.md
lib/kestrel-compiler/examples/: basic_compilation.rs  test_module_diagnostics.rs
lib/kestrel-compiler/src/: builder.rs  compilation.rs  components.rs  diagnostic.rs  error.rs  lib.rs  run.rs  source_file.rs  stdlib.rs
lib/kestrel-doc/: Cargo.toml
lib/kestrel-doc/src/: lib.rs  main.rs  markdown.rs  repro_test.rs  signature.rs
lib/kestrel-execution-graph-lowering/: Cargo.toml
lib/kestrel-execution-graph-lowering/src/: bound_method.rs  closure.rs  closure_tests.rs  context.rs  error.rs  expr.rs  format_spec.rs  lib.rs  match_lowering.rs  name.rs  pattern.rs  protocol_tests.rs  stmt.rs  thunk.rs  ty.rs
lib/kestrel-hir-lower/: AGENTS.md  Cargo.toml
lib/kestrel-hir-lower/docs/: architecture.md  design.md
lib/kestrel-hir-lower/src/: AGENTS.md  ctx.rs  desugar.rs  expr.rs  format_spec.rs  lib.rs  literal.rs  pat.rs  stmt.rs  ty.rs
lib/kestrel-hir-lower/tests/: integration.rs
lib/kestrel-lsp/: CHECKLIST.md  Cargo.toml  HOVER.md
lib/kestrel-lsp/src/: backend.rs  compiler_worker.rs  convert.rs  diagnostics.rs  documents.rs  lib.rs  main.rs  position.rs  project.rs  references.rs  semantic.rs  server.rs  syntax.rs  ty_format.rs  types.rs
lib/kestrel-lsp/tests/: integration.rs
lib/kestrel-mir/: AGENTS.md  Cargo.toml
lib/kestrel-mir-lower/: AGENTS.md  Cargo.toml
lib/kestrel-mir-lower-3/: AGENTS.md  Cargo.toml
lib/kestrel-mir-lower-3/src/: context.rs  lib.rs  ty.rs  validate.rs
lib/kestrel-mir-lower/docs/: architecture.md
lib/kestrel-mir-lower/src/: body_lower.rs  context.rs  enum_lower.rs  function_lower.rs  lib.rs  name.rs  protocol_lower.rs  resolved_ty.rs  static_lower.rs  struct_lower.rs  ty.rs  validate.rs  witness_lower.rs
lib/kestrel-mir/docs/: architecture.md  codegen.md  design-rationale.md  improvements-over-lib1.md  instructions.md  ir.md  lib1-review.md  lowering.md  ownership.md  passes.md
lib/kestrel-mir/src/: body.rs  builder.rs  display.rs  id.rs  immediate.rs  layout.rs  lib.rs  op.rs  place.rs  statement.rs  substitute.rs  terminator.rs  ty.rs  ty_query.rs  value.rs  verify.rs  witness_lookup.rs
lib/kestrel-name-res/: Cargo.toml
lib/kestrel-name-res/docs/: architecture.md  resolution.md  scope.md  visibility.md
lib/kestrel-name-res/src/: conformances.rs  extensions.rs  helpers.rs  lib.rs  protocol_members.rs  resolve_name.rs  resolve_type.rs  resolve_value.rs  scope.rs  traversal.rs  type_members.rs  visibility.rs
lib/kestrel-name-res/tests/: integration.rs
lib/kestrel-parser/: Cargo.toml
lib/kestrel-parser/docs/: architecture.md
lib/kestrel-parser/src/: event.rs  input.rs  lib.rs  parser.rs  type_decl.rs
lib/kestrel-pattern-matching/: AGENTS.md  Cargo.toml
lib/kestrel-pattern-matching/docs/: architecture.md
lib/kestrel-pattern-matching/src/: constructor.rs  decision_tree.rs  flat_pat.rs  lib.rs  matrix.rs  usefulness.rs  witness.rs
lib/kestrel-semantic-analyzers/: Cargo.toml
lib/kestrel-semantic-analyzers/src/: analyzer.rs  context.rs  lib.rs  runner.rs  walker.rs
lib/kestrel-semantic-model/: Cargo.toml  refactor-queries.md
lib/kestrel-semantic-model/docs/: queries.md  query-style-guide.md  semantic-model-migration.md  semantic-model.md
lib/kestrel-semantic-model/src/: extension_registry.rs  lib.rs  (+9 more)
lib/kestrel-semantic-tree/: Cargo.toml
lib/kestrel-semantic-tree-binder/: Cargo.toml  PATTERNS.md
lib/kestrel-semantic-tree-builder/: Cargo.toml
lib/kestrel-semantic-tree-lowerer/: Cargo.toml
lib/kestrel-semantics/: Cargo.toml
lib/kestrel-test-suite/: AGENTS.md  Cargo.toml  test_output.txt
lib/kestrel-type-infer/: AGENTS.md  Cargo.toml
lib2/kestrel-analyze/: AGENTS.md  Cargo.toml
(+5668 files in other folders)
