[package]
name = "kestrel"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-lexer = { path = "lib/kestrel-lexer" }
kestrel-parser = { path = "lib/kestrel-parser" }
kestrel-compiler = { path = "lib/kestrel-compiler" }
kestrel-execution-graph-lowering = { path = "lib/kestrel-execution-graph-lowering" }
clap = { workspace = true }

[workspace.package]
version = "0.15.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
chumsky = "0.12"
clap = { version = "4.5.53", features = ["derive"] }
codespan-reporting = "0.13.1"
dashmap = "6"
downcast-rs = "2.0.2"
logos = "0.16.0"
parking_lot = "0.12.5"
rowan = "0.16.1"
stacker = "0.1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
unicode-xid = "0.2"


[workspace]
members = [
    "lib/kestrel-span",
    "lib/kestrel-prelude",
    "lib/kestrel-lexer",
    "lib/kestrel-parser",
    "lib/kestrel-syntax-tree",
    "lib/semantic-tree",
    "lib/kestrel-semantic-tree",
    "lib/kestrel-semantic-model",
    "lib/kestrel-semantic-analyzers",
    "lib/kestrel-semantic-tree-builder",
    "lib/kestrel-semantic-tree-binder",
    "lib/kestrel-semantic-type-inference",
    "lib/kestrel-semantic-pattern-matching",
    "lib/kestrel-reporting",
    "lib/kestrel-compiler",
    "lib/kestrel-execution-graph",
    "lib/kestrel-execution-graph-lowering",
    "lib/kestrel-codegen",
    "lib/kestrel-codegen-cranelift",
    "lib/kestrel-lsp",
    "lib/kestrel-test-suite",
    "lib2/kestrel-hecs",
    "lib2/kestrel-span",
    "lib2/kestrel-lexer",
    "lib2/kestrel-syntax-tree",
    "lib2/kestrel-parser",
    "lib2/kestrel-compiler",
    "lib2/kestrel-ast-builder"
]
exclude = ["registry"]

# Workspace-wide lint configuration
# Individual crates inherit these with [lints] workspace = true
[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"
unused_variables = "warn"
unused_mut = "warn"

[workspace.lints.clippy]
# Deny categories that indicate bugs
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Warn on style and performance issues
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

# Specific lint overrides (allow some noisy lints)
too_many_arguments = "allow"  # Common in compiler code
large_enum_variant = "allow"  # AST nodes are naturally large
type_complexity = "allow"     # Parser combinators have complex types

# Reduce stack frame size in debug builds for recursive parsers
[profile.dev]
opt-level = 1

[profile.dev.package.kestrel-parser]
opt-level = 2

[profile.dev.package.kestrel-parser2]
opt-level = 2
