[package]
name = "kestrel"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-compiler = { path = "lib/kestrel-compiler" }
kestrel-compiler-driver = { path = "lib/kestrel-compiler-driver" }
kestrel-ast-builder = { path = "lib/kestrel-ast-builder" }
kestrel-analyze = { path = "lib/kestrel-analyze" }
kestrel-hecs = { path = "lib/kestrel-hecs" }
kestrel-mir = { path = "lib/kestrel-mir" }
kestrel-reporting = { path = "lib/kestrel-reporting" }
kestrel-mir-lower = { path = "lib/kestrel-mir-lower" }
kestrel-ownership = { path = "lib/kestrel-ownership" }
kestrel-codegen = { path = "lib/kestrel-codegen" }
kestrel-codegen-cranelift = { path = "lib/kestrel-codegen-cranelift" }
codespan-reporting = { workspace = true }
clap = { workspace = true }

[workspace.package]
version = "0.16.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
chumsky = "0.12"
clap = { version = "4.5.53", features = ["derive"] }
codespan-reporting = "0.13.1"
dashmap = "6.1.0"
downcast-rs = "2.0.2"
logos = "0.16.1"
parking_lot = "0.12.5"
rowan = "0.16.1"
indexmap = "2"
stacker = "0.1.24"
tokio = { version = "1.52.1", features = ["full"] }
toml = "0.8"
tower-lsp = "0.20"
unicode-xid = "0.2"
smallvec = "1"
walkdir = "2"


[workspace]
members = [
    "lib/kestrel-hecs",
    "lib/kestrel-span",
    "lib/kestrel-lexer",
    "lib/kestrel-syntax-tree",
    "lib/kestrel-parser",
    "lib/kestrel-compiler",
    "lib/kestrel-compiler-driver",
    "lib/kestrel-ast",
    "lib/kestrel-ast-builder",
    "lib/kestrel-hir",
    "lib/kestrel-name-res",
    "lib/kestrel-hir-lower",
    "lib/kestrel-type-infer",
    "lib/kestrel-pattern-matching",
    "lib/kestrel-semantics",
    "lib/kestrel-analyze",
    "lib/kestrel-debug",
    "lib/kestrel-reporting",
    "lib/kestrel-mir",
    "lib/kestrel-mir-lower",
    "lib/kestrel-ownership",
    "lib/kestrel-codegen",
    "lib/kestrel-codegen-cranelift",
    "lib/kestrel-doc",
    "lib/kestrel-lsp",
    "lib/kestrel-mir-2",
    "lib/kestrel-test-suite",
    # "external/triage",  # TEMP: excluded during memory-model rewrite; restore before merging
]
exclude = ["registry", "external/flock-registry"]

# Workspace-wide lint configuration
# Individual crates inherit these with [lints] workspace = true
[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"
unused_variables = "warn"
unused_mut = "warn"

[workspace.lints.clippy]
# Deny categories that indicate bugs
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Warn on style and performance issues
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

# Specific lint overrides (allow some noisy lints)
too_many_arguments = "allow"  # Common in compiler code
large_enum_variant = "allow"  # AST nodes are naturally large
type_complexity = "allow"     # Parser combinators have complex types

# Reduce stack frame size in debug builds for recursive parsers
[profile.dev]
opt-level = 1

[profile.dev.package.kestrel-parser]
opt-level = 2
