[package]
name = "kestrel-codegen-cranelift-3"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-mir-3 = { path = "../kestrel-mir-3" }
kestrel-codegen = { path = "../kestrel-codegen" }
kestrel-hecs = { path = "../kestrel-hecs" }
cranelift-codegen = "0.129"
cranelift-frontend = "0.129"
cranelift-module = "0.129"
cranelift-object = "0.129"
cranelift-native = "0.129"
target-lexicon = "0.12"
indexmap = { workspace = true }
