[package]
name = "kestrel-codegen-cranelift"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-codegen = { path = "../kestrel-codegen" }
kestrel-execution-graph = { path = "../kestrel-execution-graph" }
cranelift-codegen = "0.113"
cranelift-frontend = "0.113"
cranelift-module = "0.113"
cranelift-object = "0.113"
cranelift-native = "0.113"
target-lexicon = "0.12"
