[package]
name = "kestrel-compiler-driver"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-compiler = { path = "../kestrel-compiler" }
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
kestrel-analyze = { path = "../kestrel-analyze" }
kestrel-type-infer = { path = "../kestrel-type-infer" }
kestrel-reporting = { path = "../kestrel-reporting" }
codespan-reporting = { workspace = true }
