[package]
name = "kestrel-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-lexer = { path = "../kestrel-lexer" }
kestrel-parser = { path = "../kestrel-parser" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-semantic-tree-builder = { path = "../kestrel-semantic-tree-builder" }
kestrel-semantic-tree-binder = { path = "../kestrel-semantic-tree-binder" }
kestrel-semantic-model = { path = "../kestrel-semantic-model" }
kestrel-semantic-analyzers = { path = "../kestrel-semantic-analyzers" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-span = { path = "../kestrel-span" }
kestrel-execution-graph = { path = "../kestrel-execution-graph" }
kestrel-execution-graph-lowering = { path = "../kestrel-execution-graph-lowering" }
kestrel-codegen = { path = "../kestrel-codegen" }
kestrel-codegen-cranelift = { path = "../kestrel-codegen-cranelift" }
