[package]
name = "kestrel-compiler"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-lexer = { path = "../kestrel-lexer" }
kestrel-parser = { path = "../kestrel-parser" }
kestrel-span = { path = "../kestrel-span" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
kestrel-hir = { path = "../kestrel-hir" }
kestrel-hir-lower = { path = "../kestrel-hir-lower" }
kestrel-name-res = { path = "../kestrel-name-res" }
kestrel-type-infer = { path = "../kestrel-type-infer" }
kestrel-analyze = { path = "../kestrel-analyze" }
kestrel-debug = { path = "../kestrel-debug" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-mir = { path = "../kestrel-mir" }
kestrel-mir-lower = { path = "../kestrel-mir-lower" }
kestrel-ownership = { path = "../kestrel-ownership" }
kestrel-codegen = { path = "../kestrel-codegen" }
kestrel-codegen-cranelift = { path = "../kestrel-codegen-cranelift" }
codespan-reporting = { workspace = true }
