[package]
name = "kestrel-execution-graph-lowering"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-execution-graph = { path = "../kestrel-execution-graph" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-semantic-model = { path = "../kestrel-semantic-model" }
kestrel-span = { path = "../kestrel-span" }
kestrel-reporting = { path = "../kestrel-reporting" }
semantic-tree = { path = "../semantic-tree" }
