[package]
name = "kestrel-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-compiler = { path = "../kestrel-compiler" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-span = { path = "../kestrel-span" }
semantic-tree = { path = "../semantic-tree" }
dashmap = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }

[[bin]]
name = "kestrel-lsp"
path = "src/main.rs"

[lints]
workspace = true
