[package]
name = "kestrel-lsp"
version.workspace = true
edition.workspace = true
description = "Language server for Kestrel"

[lints]
workspace = true

[[bin]]
name = "kestrel-lsp"
path = "src/main.rs"

[dependencies]
kestrel-compiler = { path = "../kestrel-compiler" }
kestrel-compiler-driver = { path = "../kestrel-compiler-driver" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-analyze = { path = "../kestrel-analyze" }
kestrel-span = { path = "../kestrel-span" }
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
kestrel-lexer = { path = "../kestrel-lexer" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
kestrel-hir = { path = "../kestrel-hir" }
kestrel-hir-lower = { path = "../kestrel-hir-lower" }
kestrel-type-infer = { path = "../kestrel-type-infer" }
rowan = { workspace = true }
codespan-reporting = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
serde = { version = "1", features = ["derive"] }
