[package]
name = "kestrel-mir-lower"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-mir = { path = "../kestrel-mir" }
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-hir = { path = "../kestrel-hir" }
kestrel-ast = { path = "../kestrel-ast" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
kestrel-span = { path = "../kestrel-span" }
kestrel-hir-lower = { path = "../kestrel-hir-lower" }
kestrel-name-res = { path = "../kestrel-name-res" }
kestrel-type-infer = { path = "../kestrel-type-infer" }
kestrel-pattern-matching = { path = "../kestrel-pattern-matching" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-semantics = { path = "../kestrel-semantics" }

[dev-dependencies]
kestrel-compiler = { path = "../kestrel-compiler" }
kestrel-compiler-driver = { path = "../kestrel-compiler-driver" }
