[package]
name = "kestrel-mir"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-copy-fold = { path = "../kestrel-copy-fold" }
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-span = { path = "../kestrel-span" }
kestrel-debug = { path = "../kestrel-debug" }
indexmap = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
