[package]
name = "kestrel-name-res"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-hir = { path = "../kestrel-hir" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
kestrel-ast = { path = "../kestrel-ast" }

[dev-dependencies]
kestrel-lexer = { path = "../kestrel-lexer" }
kestrel-parser = { path = "../kestrel-parser" }
kestrel-span = { path = "../kestrel-span" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
