[package]
name = "kestrel-parser"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chumsky = { workspace = true }
stacker = { workspace = true }
kestrel-span = { path = "../kestrel-span" }
kestrel-lexer = { path = "../kestrel-lexer" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
