[package]
name = "kestrel-pattern-matching"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-ast = { path = "../kestrel-ast" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
kestrel-hir = { path = "../kestrel-hir" }
kestrel-name-res = { path = "../kestrel-name-res" }
kestrel-type-infer = { path = "../kestrel-type-infer" }
kestrel-span = { path = "../kestrel-span" }
