[package]
name = "kestrel-semantic-analyzers"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-semantic-model = { path = "../kestrel-semantic-model" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-semantic-tree-binder = { path = "../kestrel-semantic-tree-binder" }
kestrel-semantic-type-inference = { path = "../kestrel-semantic-type-inference" }
kestrel-semantic-pattern-matching = { path = "../kestrel-semantic-pattern-matching" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-span = { path = "../kestrel-span" }
semantic-tree = { path = "../semantic-tree" }
