[package]
name = "kestrel-semantic-model"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-prelude = { path = "../kestrel-prelude" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-span = { path = "../kestrel-span" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
semantic-tree = { path = "../semantic-tree" }
parking_lot = { workspace = true }
