[package]
name = "kestrel-semantic-tree-binder"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-semantic-model = { path = "../kestrel-semantic-model" }
kestrel-semantic-type-inference = { path = "../kestrel-semantic-type-inference" }
kestrel-prelude = { path = "../kestrel-prelude" }
kestrel-span = { path = "../kestrel-span" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-lexer = { path = "../kestrel-lexer" }
kestrel-parser = { path = "../kestrel-parser" }
semantic-tree = { path = "../semantic-tree" }
downcast-rs = { workspace = true }
parking_lot = { workspace = true }
