[package]
name = "kestrel-semantic-tree-builder"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-prelude = { path = "../kestrel-prelude" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-semantic-model = { path = "../kestrel-semantic-model" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-span = { path = "../kestrel-span" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
semantic-tree = { path = "../semantic-tree" }
