[package]
name = "kestrel-semantic-tree-lowerer"
version = "0.6.0"
edition = "2024"

[dependencies]
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-parser = { path = "../kestrel-parser" }
kestrel-semantic-model = { path = "../kestrel-semantic-model" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-semantic-tree-builder = { path = "../kestrel-semantic-tree-builder" }
kestrel-span = { path = "../kestrel-span" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
semantic-tree = { path = "../semantic-tree" }
