[package]
name = "kestrel-semantic-tree"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-span = { path = "../kestrel-span" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
semantic-tree = { path = "../semantic-tree" }
downcast-rs = { workspace = true }
parking_lot = { workspace = true }
