[package]
name = "kestrel-test-suite"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-span = { path = "../kestrel-span" }
kestrel-lexer = { path = "../kestrel-lexer" }
kestrel-parser = { path = "../kestrel-parser" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
kestrel-semantic-tree = { path = "../kestrel-semantic-tree" }
kestrel-semantic-tree-builder = { path = "../kestrel-semantic-tree-builder" }
kestrel-semantic-tree-binder = { path = "../kestrel-semantic-tree-binder" }
kestrel-semantic-analyzers = { path = "../kestrel-semantic-analyzers" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-execution-graph = { path = "../kestrel-execution-graph" }
kestrel-execution-graph-lowering = { path = "../kestrel-execution-graph-lowering" }
kestrel-codegen = { path = "../kestrel-codegen" }
kestrel-codegen-cranelift = { path = "../kestrel-codegen-cranelift" }
semantic-tree = { path = "../semantic-tree" }
downcast-rs = { workspace = true }
