[package]
name = "kestrel-test-suite"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-compiler = { path = "../kestrel-compiler" }
kestrel-compiler-driver = { path = "../kestrel-compiler-driver" }
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-mir = { path = "../kestrel-mir" }
kestrel-codegen-cranelift = { path = "../kestrel-codegen-cranelift" }
kestrel-analyze = { path = "../kestrel-analyze" }
kestrel-span = { path = "../kestrel-span" }
kestrel-reporting = { path = "../kestrel-reporting" }
kestrel-type-infer = { path = "../kestrel-type-infer" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
codespan-reporting = { workspace = true }

[dev-dependencies]
libtest-mimic = "0.8"
walkdir = "2"

[[test]]
name = "file_tests"
harness = false

[[example]]
name = "build_test"
path = "examples/build_test.rs"
