[package]
name = "kestrel-type-infer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
kestrel-copy-fold = { path = "../kestrel-copy-fold" }
kestrel-hir = { path = "../kestrel-hir" }
kestrel-hir-lower = { path = "../kestrel-hir-lower" }
kestrel-name-res = { path = "../kestrel-name-res" }
kestrel-semantics = { path = "../kestrel-semantics" }
kestrel-span = { path = "../kestrel-span" }
kestrel-debug = { path = "../kestrel-debug" }
kestrel-ast = { path = "../kestrel-ast" }

[dev-dependencies]
kestrel-lexer = { path = "../kestrel-lexer" }
kestrel-parser = { path = "../kestrel-parser" }
kestrel-syntax-tree = { path = "../kestrel-syntax-tree" }
codespan-reporting.workspace = true
