[package]
name = "kestrel-analyze"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kestrel-hecs = { path = "../kestrel-hecs" }
kestrel-ast = { path = "../kestrel-ast" }
kestrel-ast-builder = { path = "../kestrel-ast-builder" }
kestrel-hir = { path = "../kestrel-hir" }
kestrel-hir-lower = { path = "../kestrel-hir-lower" }
kestrel-type-infer = { path = "../kestrel-type-infer" }
kestrel-pattern-matching = { path = "../kestrel-pattern-matching" }
kestrel-name-res = { path = "../kestrel-name-res" }
kestrel-span2 = { path = "../kestrel-span" }

[dev-dependencies]
kestrel-lexer2 = { path = "../kestrel-lexer" }
kestrel-parser2 = { path = "../kestrel-parser" }
